Optimization code, add djRadio command

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -25,8 +25,14 @@
     "cloudmusic.help.album.subscribe": "收藏专辑 /cloudmusic album subscribe [id]",
     "cloudmusic.help.album.unsubscribe": "取消收藏专辑 /cloudmusic album unsubscribe [id]",
 
+    "cloudmusic.help.dj": "获取电台 /cloudmusic dj [id]",
+    "cloudmusic.help.dj.play": "播放电台 /cloudmusic dj play [id]",
+    "cloudmusic.help.dj.subscribe": "收藏电台 /cloudmusic dj subscribe [id]",
+    "cloudmusic.help.dj.unsubscribe": "取消收藏电台 /cloudmusic dj unsubscribe [id]",
+
     "cloudmusic.help.user": "获取用户 /cloudmusic user [id]",
     "cloudmusic.help.user.playlist": "获取用户歌单 /cloudmusic user playlist [id]",
+    "cloudmusic.help.user.dj": "获取用户创建的所有电台 /cloudmusic user dj [id]",
     "cloudmusic.help.user.like": "获取用户喜欢的歌曲 /cloudmusic user like [id]",
     "cloudmusic.help.user.record.all": "获取用户听歌榜单(所有时间) /cloudmusic user record all [id]",
     "cloudmusic.help.user.record.week": "获取用户听歌榜单(周) /cloudmusic user record week [id]",
@@ -35,20 +41,22 @@
     "cloudmusic.help.my.fm": "私人 fm /cloudmusic my fm",
     "cloudmusic.help.my.like": "我喜欢的歌曲 /cloudmusic my like",
     "cloudmusic.help.my.playlist": "获取我的歌单 /cloudmusic my playlist",
+    "cloudmusic.help.my.dj": "获取我创建的所有电台 /cloudmusic my dj",
     "cloudmusic.help.my.playlist.add": "向我的歌单添加歌曲 /cloudmusic my playlist add [musicId]",
     "cloudmusic.help.my.playlist.del": "向我的歌单删除歌曲 /cloudmusic my playlist del [musicId]",
     "cloudmusic.help.my.recommend.music": "每日推荐歌曲 /cloudmusic my recommend music",
     "cloudmusic.help.my.recommend.playlist": "每日推荐歌单 /cloudmusic my recommend playlist",
     "cloudmusic.help.my.sublist.album": "我收藏的专辑 /cloudmusic my sublist album",
     "cloudmusic.help.my.sublist.artist": "我收藏的歌手 /cloudmusic my sublist artist",
+    "cloudmusic.help.my.sublist.dj": "我收藏的歌手 /cloudmusic my sublist dj",
 
     "cloudmusic.help.search.music": "搜索歌曲 /cloudmusic search music [key]",
     "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
     "cloudmusic.help.search.artist": "搜索歌手 /cloudmusic search artist [key]",
     "cloudmusic.help.search.playlist": "搜索歌单 /cloudmusic search playlist [key]",
+    "cloudmusic.help.search.dj": "搜索电台 /cloudmusic search dj [key]",
 
     "cloudmusic.help.login.email": "邮箱登录 /cloudmusic login email [邮箱] [密码]",
-    "cloudmusic.help.login.country.code": "设置手机号国家码 /cloudmusic login country [国家码]",
     "cloudmusic.help.login.captcha": "发送手机验证码 /cloudmusic login captcha [手机号]",
     "cloudmusic.help.login.captcha.login": "手机验证码登录 /cloudmusic login captcha [手机号] [验证码]",
     "cloudmusic.help.login.captcha.phone": "手机密码登录 /cloudmusic login phone [手机号] [密码]",
@@ -97,14 +105,25 @@
     "cloudmusic.info.artist.album": "专辑数: %d",
     "cloudmusic.info.artist.id": "id: %d",
 
+    "cloudmusic.info.dj.music.radio": "电台: %d",
+    "cloudmusic.info.dj.creator": "主播: %d",
+    "cloudmusic.info.dj.category": "类别: %d",
+    "cloudmusic.info.dj.size": "节目数: %d",
+    "cloudmusic.info.dj.count": "收藏数: %d 分享数: %d",
+    "cloudmusic.info.dj.music.count": "播放数: %d 点赞数: %d",
+    "cloudmusic.info.dj.music.id": "电台歌曲 id (用于获取歌曲 url): %d",
+    "cloudmusic.info.dj.id": "id: %d",
+
     "cloudmusic.info.page.music.similar": "%d 的相似歌曲",
     "cloudmusic.info.page.music.similar.playlist": "%d 的相似歌单",
     "cloudmusic.info.page.artist.album": "%d 的所有专辑",
     "cloudmusic.info.page.artist.similar": "%d 的相似歌手",
-    "cloudmusic.info.page.user.playlist": "%d 的所有歌单",
+    "cloudmusic.info.page.user.playlist": "%d 所有的歌单",
+    "cloudmusic.info.page.user.dj": "%d 创建的所有电台",
     "cloudmusic.info.page.recommend.playlist": "%d 的每日推荐歌单",
     "cloudmusic.info.page.sublist.album": "%d 的所有专辑收藏",
     "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
+    "cloudmusic.info.page.sublist.dj": "%d 的所有电台收藏",
     "cloudmusic.info.page.search": "%d 的搜索结果",
     "cloudmusic.info.page.playing.all": "播放列表",
     "cloudmusic.info.page.user.playlist.add": "向 %d 用户歌单添加歌曲",
@@ -125,12 +144,15 @@
     "cloudmusic.info.command.playlist.subscribe": "收藏歌单 %d",
     "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %d",
     "cloudmusic.info.command.playlist.play": "播放 %d 歌单",
+    "cloudmusic.info.command.dj.play": "播放 %d 电台",
+    "cloudmusic.info.command.dj.subscribe": "收藏电台 %d",
+    "cloudmusic.info.command.dj.unsubscribe": "取消收藏电台 %d",
     "cloudmusic.info.command.music.like": "红心 %d",
     "cloudmusic.info.command.music.unlike": "取消红心 %d",
     "cloudmusic.info.command.music.play": "播放 %d",
     "cloudmusic.info.command.trash": "将 %d 扔进垃圾桶",
     "cloudmusic.info.command.login": "成功登录至 %d",
-    "cloudmusic.info.command.login.sendcaptcha": "成功向手机号发送验证码...",
+    "cloudmusic.info.command.login.send.captcha": "成功向手机号发送验证码...",
     "cloudmusic.info.command.country.code": "设置手机号国家码为 %d...",
 
     "cloudmusic.options.play": "[播放]",
@@ -147,6 +169,7 @@
     "cloudmusic.options.unsubscribe": "[取消收藏]",
     "cloudmusic.options.user.like": "[喜欢的歌曲]",
     "cloudmusic.options.user.playlist": "[用户歌单]",
+    "cloudmusic.options.user.dj": "[用户电台]",
     "cloudmusic.options.record.all": "[听歌榜单(所有时间)]",
     "cloudmusic.options.record.week": "[听歌榜单(周)]",
     "cloudmusic.options.page.prev": "[上一页]",
@@ -186,6 +209,9 @@
 
     "cloudmusic.config.play.loop": "循环播放 | play.loop",
     "cloudmusic.config.play.loop.comment": "循环播放播放列表",
+
+    "cloudmusic.config.dj.radio.play.asc": "升序播放电台 | dj.radio.play.asc",
+    "cloudmusic.config.dj.radio.play.asc.comment": "排序方式, 设置 true 可改为 老 => 新 (默认为 false 新 => 老)",
 
     "cloudmusic.config.cache.path": "缓存路径 | cache.path",
     "cloudmusic.config.cache.path.comment": "歌曲缓存路径 (默认游戏目录下的 cloud_music_cache)",
