add StyleTag and style command, intelligence play mode command

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -39,9 +39,11 @@
 
     "cloudmusic.help.my": "获取 cookie 用户 /cloudmusic my",
     "cloudmusic.help.my.fm": "私人 fm /cloudmusic my fm",
+    "cloudmusic.help.my.intelligence": "心动模式播放 /cloudmusic my intelligence",
     "cloudmusic.help.my.like": "我喜欢的歌曲 /cloudmusic my like",
     "cloudmusic.help.my.playlist": "获取我的歌单 /cloudmusic my playlist",
     "cloudmusic.help.my.dj": "获取我创建的所有电台 /cloudmusic my dj",
+    "cloudmusic.help.my.style": "获取我的曲风偏好 /cloudmusic my style",
     "cloudmusic.help.my.playlist.add": "向我的歌单添加歌曲 /cloudmusic my playlist add [musicId]",
     "cloudmusic.help.my.playlist.del": "向我的歌单删除歌曲 /cloudmusic my playlist del [musicId]",
     "cloudmusic.help.my.recommend.music": "每日推荐歌曲 /cloudmusic my recommend music",
@@ -49,6 +51,10 @@
     "cloudmusic.help.my.sublist.album": "我收藏的专辑 /cloudmusic my sublist album",
     "cloudmusic.help.my.sublist.artist": "我收藏的歌手 /cloudmusic my sublist artist",
     "cloudmusic.help.my.sublist.dj": "我收藏的歌手 /cloudmusic my sublist dj",
+
+    "cloudmusic.help.style": "获取曲风 /cloudmusic style [styleId]",
+    "cloudmusic.help.style.all": "获取曲风列表 /cloudmusic style all",
+    "cloudmusic.help.style.children": "获取子曲风列表 /cloudmusic style children [styleId]",
 
     "cloudmusic.help.search.music": "搜索歌曲 /cloudmusic search music [key]",
     "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
@@ -88,6 +94,7 @@
     "cloudmusic.shar.dj.radio": "分享网易云电台",
     "cloudmusic.shar.playlist": "分享网易云歌单",
     "cloudmusic.shar.user": "分享网易云用户",
+    "cloudmusic.shar.style": "分享网易云曲风",
 
     "cloudmusic.info.not.cookie": "§c§l无效的 Cookie, 请设置 Cookie 后重试",
     "cloudmusic.info.page.count": "§c§l===========%d页§c§l===========",
@@ -121,6 +128,9 @@
     "cloudmusic.info.dj.music.id": "电台歌曲 id (用于获取歌曲 url): %d",
     "cloudmusic.info.dj.id": "id: %d",
 
+    "cloudmusic.info.style.music.count": "单曲数: %d",
+    "cloudmusic.info.style.artist.count": "歌手数: %d",
+
     "cloudmusic.info.page.music.similar": "%d 的相似歌曲",
     "cloudmusic.info.page.music.similar.playlist": "%d 的相似歌单",
     "cloudmusic.info.page.artist.album": "%d 的所有专辑",
@@ -131,16 +141,20 @@
     "cloudmusic.info.page.sublist.album": "%d 的所有专辑收藏",
     "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
     "cloudmusic.info.page.sublist.dj": "%d 的所有电台收藏",
+    "cloudmusic.info.page.preference.style": "%d 的曲风偏好",
     "cloudmusic.info.page.search": "%d 的搜索结果",
     "cloudmusic.info.page.playing.all": "播放列表",
     "cloudmusic.info.page.user.playlist.add": "向 %d 用户歌单添加歌曲",
     "cloudmusic.info.page.user.playlist.del": "向 %d 用户歌单删除歌曲",
+    "cloudmusic.info.page.style": "曲风列表",
+    "cloudmusic.info.page.style.children": "曲风 %d - %d 的子曲风列表",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
 
     "cloudmusic.info.command.playlist.add": "向 %d 歌单添加歌曲 musicId: %d",
     "cloudmusic.info.command.playlist.del": "向 %d 歌单删除歌曲 musicId: %d",
     "cloudmusic.info.command.recommend.music": "播放每日推荐歌曲",
     "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
+    "cloudmusic.info.command.intelligence": "进入心动模式播放",
     "cloudmusic.info.command.like": "播放 %d 喜欢的歌曲",
     "cloudmusic.info.command.album.subscribe": "收藏专辑 %d",
     "cloudmusic.info.command.album.unsubscribe": "取消收藏专辑 %d",
@@ -158,6 +172,7 @@
     "cloudmusic.info.command.music.unlike": "取消红心 %d",
     "cloudmusic.info.command.music.play": "播放 %d",
     "cloudmusic.info.command.trash": "将 %d 扔进垃圾桶",
+    "cloudmusic.info.command.style.not.children": "曲风 %d - %d 没有子曲风",
     "cloudmusic.info.command.login": "成功登录至 %d",
     "cloudmusic.info.command.login.send.captcha": "成功向手机号发送验证码...",
     "cloudmusic.info.command.country.code": "设置手机号国家码为 %d...",
@@ -180,6 +195,7 @@
     "cloudmusic.options.user.dj": "[用户电台]",
     "cloudmusic.options.record.all": "[听歌榜单(所有时间)]",
     "cloudmusic.options.record.week": "[听歌榜单(周)]",
+    "cloudmusic.options.children.styles": "[子曲风]",
     "cloudmusic.options.page.prev": "[上一页]",
     "cloudmusic.options.page.next": "[下一页]",
     "cloudmusic.options.page.to": "[跳转至...]",
