add music/album/artist/playlist style command, Optimization file path

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -55,6 +55,10 @@
     "cloudmusic.help.style": "获取曲风 /cloudmusic style [styleId]",
     "cloudmusic.help.style.all": "获取曲风列表 /cloudmusic style all",
     "cloudmusic.help.style.children": "获取子曲风列表 /cloudmusic style children [styleId]",
+    "cloudmusic.help.style.music": "曲风歌曲 /cloudmusic style music [styleId]",
+    "cloudmusic.help.style.playlist": "曲风歌单 /cloudmusic style playlist [styleId]",
+    "cloudmusic.help.style.artist": "曲风歌手 /cloudmusic style artist [styleId]",
+    "cloudmusic.help.style.album": "曲风专辑 /cloudmusic style album [styleId]",
 
     "cloudmusic.help.search.music": "搜索歌曲 /cloudmusic search music [key]",
     "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
@@ -147,6 +151,10 @@
     "cloudmusic.info.page.user.playlist.add": "向 %d 用户歌单添加歌曲",
     "cloudmusic.info.page.user.playlist.del": "向 %d 用户歌单删除歌曲",
     "cloudmusic.info.page.style": "曲风列表",
+    "cloudmusic.info.page.style.music": "曲风 %d - %d 的曲风歌曲列表",
+    "cloudmusic.info.page.style.playlist": "曲风 %d - %d 的曲风歌单列表",
+    "cloudmusic.info.page.style.artist": "曲风 %d - %d 的曲风歌手列表",
+    "cloudmusic.info.page.style.album": "曲风 %d - %d 的曲风专辑列表",
     "cloudmusic.info.page.style.children": "曲风 %d - %d 的子曲风列表",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
 
@@ -195,7 +203,11 @@
     "cloudmusic.options.user.dj": "[用户电台]",
     "cloudmusic.options.record.all": "[听歌榜单(所有时间)]",
     "cloudmusic.options.record.week": "[听歌榜单(周)]",
-    "cloudmusic.options.children.styles": "[子曲风]",
+    "cloudmusic.options.style.music": "[曲风歌曲]",
+    "cloudmusic.options.style.playlist": "[曲风歌单]",
+    "cloudmusic.options.style.artist": "[曲风歌手]",
+    "cloudmusic.options.style.album": "[曲风专辑]",
+    "cloudmusic.options.children.style": "[子曲风]",
     "cloudmusic.options.page.prev": "[上一页]",
     "cloudmusic.options.page.next": "[下一页]",
     "cloudmusic.options.page.to": "[跳转至...]",
